[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = "Bookstore API"
authors = ["Wendel <wendelkleberty@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.3.1"
factory-boy = "^3.2.1"
django = "^4.2.2"
django-rest-framework = "^0.1.0"
django-extensions = "^3.2.3"
django-debug-toolbar = "^4.1.0"
psycopg2-binary = "^2.9.6"
whitenoise = "^6.5.0"
gunicorn = "^20.1.0"
flake8 = "^6.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
